--- a/precastr/Base.lproj/Main.storyboard
+++ b/precastr/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="a6n-jY-43O">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="a6n-jY-43O">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -809,7 +809,7 @@
         <scene sceneID="4ce-z3-unE">
             <objects>
                 <navigationController storyboardIdentifier="nav" title="My Castts" useStoryboardIdentifierAsRestorationIdentifier="YES" id="qba-MY-KTk" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Home" selectedImage="home" id="hRm-lq-x43"/>
+                    <tabBarItem key="tabBarItem" title="Home" image="home-black" selectedImage="home" id="hRm-lq-x43"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="GnG-Le-s3f">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -889,7 +889,7 @@
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Mandeep Singh" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v1D-b1-FX9">
-                                                    <rect key="frame" x="73" y="12" width="280" height="21"/>
+                                                    <rect key="frame" x="73" y="11" width="280" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="14"/>
                                                     <nil key="highlightedColor"/>
@@ -1159,7 +1159,16 @@
         <scene sceneID="NSp-ml-HRb">
             <objects>
                 <navigationController id="kO2-V3-cUf" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Add New" selectedImage="add-new" id="0lK-SZ-RMA"/>
+                    <tabBarItem key="tabBarItem" title="Add New" image="add-new-black" selectedImage="add-new-black" id="0lK-SZ-RMA">
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="unselectedItemTintColor">
+                                <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
+                                <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </tabBarItem>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="u4L-VY-YkO">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1312,7 +1321,7 @@
         <scene sceneID="3sn-ht-Eyw">
             <objects>
                 <navigationController id="uZW-Lw-sMa" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="My Account" image="my-account" selectedImage="my-account" id="qUf-mh-uu7"/>
+                    <tabBarItem key="tabBarItem" title="My Account" image="my-account-black" selectedImage="my-account" id="qUf-mh-uu7"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="NXA-Ef-yEn">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1476,7 +1485,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="jfM-Fu-8nO"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Home" image="home" selectedImage="home" id="3dt-et-euE"/>
+                    <tabBarItem key="tabBarItem" title="Home" image="home-black" selectedImage="home" id="3dt-et-euE"/>
                     <navigationItem key="navigationItem" title="My Casts" id="yjc-vi-PPv"/>
                     <connections>
                         <outlet property="noPostsText" destination="zcJ-FG-BB7" id="avG-bC-xia"/>
@@ -1558,25 +1567,28 @@
         <image name="Terms &amp; Conditions" width="18" height="18"/>
         <image name="account" width="18" height="18"/>
         <image name="add-new" width="18" height="18"/>
+        <image name="add-new-black" width="20" height="20"/>
         <image name="back" width="5" height="9"/>
-        <image name="camera" width="66.5" height="53.5"/>
-        <image name="chat" width="23" height="21.5"/>
+        <image name="camera" width="66" height="53"/>
+        <image name="chat" width="23" height="21"/>
         <image name="clips" width="16" height="14"/>
-        <image name="facebook" width="38.5" height="38.5"/>
+        <image name="facebook" width="38" height="38"/>
         <image name="facebook-group" width="15" height="15"/>
         <image name="faq" width="18" height="18"/>
-        <image name="hold" width="16.333333969116211" height="20.333333969116211"/>
+        <image name="hold" width="16" height="20"/>
         <image name="home" width="18" height="18"/>
+        <image name="home-black" width="18" height="18"/>
         <image name="logo" width="138" height="138"/>
         <image name="logout" width="18" height="14"/>
         <image name="membership" width="18" height="18"/>
         <image name="my-account" width="18" height="18"/>
-        <image name="passage-of-time" width="20" height="18.666666030883789"/>
-        <image name="sent-email" width="16" height="14.5"/>
-        <image name="twitter" width="38.5" height="38.5"/>
+        <image name="my-account-black" width="18" height="18"/>
+        <image name="passage-of-time" width="20" height="18"/>
+        <image name="sent-email" width="16" height="14"/>
+        <image name="twitter" width="38" height="38"/>
         <image name="twitter-group" width="15" height="15"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="NGY-dz-YZp"/>
+        <segue reference="0cb-mg-TdQ"/>
     </inferredMetricsTieBreakers>
 </document>
